fix: fixes horizontal scrollbar

--- a/mock-2/private/styles/header.sass
+++ b/mock-2/private/styles/header.sass
@@ -7,6 +7,7 @@
 
   @media (min-width: 1201px)
     width: $base-width
+    max-width: 100%
     margin-left: auto
     margin-right: auto
 
