--- a/mock-2/private/styles/section.sass
+++ b/mock-2/private/styles/section.sass
@@ -1,8 +1,8 @@
 @use 'common.sass' as *
 
 .section
-  width: 100%
-  max-width: $base-width
+  width: $base-width
+  max-width: 100%
   margin-left: auto
   margin-right: auto
   margin-bottom: 100px
@@ -35,4 +35,4 @@
     margin-bottom: 0
 
   &_wide
-    max-width: none
+    width: 100%
